--- a/nginx.conf
+++ b/nginx.conf
@@ -50,9 +50,8 @@ http {
         }
 
         location /signin{
-	root C:/Users/A&D/Downloads/nginx-1.23.3/html/signin/;
-index authorize.html;
-  		 
+		#root html
+		index authorized.html; 
         }
 
 
